Changed Utility.bringToFront() to work across all platforms.
Still needs some testing - it is quite a nasty hack...

(from subversion r5682)